# DeepSeek-TUI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEWHALE_0_8_68_TRACKER.md  Cargo.toml  MODEL_ALIAS_PRECEDENCE.md  config.example.toml
.github/: AUTHOR_MAP
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: auto-tag.yml  ci.yml  release.yml  sync-cnb.yml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: chat_completions.rs  lib.rs
crates/build-support/src/: lib.rs
crates/cli/src/: lib.rs  update.rs
crates/cli/tests/: diagnostic_dispatch_read_only.rs
crates/config/assets/: models_dev.bundled.json
crates/config/src/: catalog.rs  lib.rs  provider.rs  provider_defaults.rs  provider_kind.rs  tests.rs  user_constitution.rs
crates/core/src/: lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/lane/src/: registry.rs
crates/protocol/src/: fleet.rs  lib.rs  workroom.rs
crates/release/: Cargo.toml
crates/release/src/: lib.rs
crates/secrets/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/state/tests/: parity_state.rs
crates/tools/src/: lib.rs
crates/tools/tests/: parity_tools.rs
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/assets/: model_catalog.bundled.json
crates/tui/locales/: en.json  es-419.json  ja.json  ko.json  pt-BR.json  vi.json  zh-Hans.json
crates/tui/src/: artifacts.rs  client.rs  command_safety.rs  composer_stash.rs  config.rs  config_persistence.rs  external_credentials.rs  hooks.rs  localization.rs  logging.rs  main.rs  model_inventory.rs  model_registry.rs  model_routing.rs  models.rs  oauth.rs  pricing.rs  prompt_zones.rs  prompts.rs  provider_lake.rs  purge.rs  runtime_api.rs  runtime_threads.rs  session_manager.rs  settings.rs  task_manager.rs  tls.rs  utils.rs
crates/tui/src/client/: anthropic.rs  chat.rs  responses.rs  stream_entry.rs
crates/tui/src/commands/: mod.rs  session.rs
crates/tui/src/commands/groups/config/: config.rs
crates/tui/src/commands/groups/core/: agent.rs  core.rs  fleet.rs
crates/tui/src/commands/groups/debug/: debug.rs
crates/tui/src/commands/groups/session/: session.rs
crates/tui/src/config/: models.rs  tests.rs
crates/tui/src/core/: engine.rs  ops.rs  session.rs  turn.rs
crates/tui/src/core/engine/: capacity_flow.rs  context.rs  dispatch.rs  streaming.rs  tests.rs  tool_catalog.rs  turn_loop.rs
crates/tui/src/fleet/: ledger.rs
crates/tui/src/plugins/: discovery.rs
crates/tui/src/prompts/: constitution.md  text.rs
crates/tui/src/prompts/modes/: agent.md
crates/tui/src/runtime_threads/: tests.rs
crates/tui/src/skills/: install.rs
crates/tui/src/snapshot/: repo.rs
crates/tui/src/tools/: apply_patch.rs  approval_cache.rs  dev_server_readiness.rs  fetch_url.rs  file.rs  file_search.rs  file_tool.rs  git.rs  git_history.rs  git_tool.rs  goal.rs  handle.rs  large_output_router.rs  mod.rs  registry.rs  run_tool.rs  search.rs  shell.rs  skill.rs  tasks.rs  test_runner.rs  tool_result_retrieval.rs  truncate.rs  validate_data.rs  verifier.rs  web_search.rs  web_tool.rs  workflow.rs  workflow_plan_approval.rs
crates/tui/src/tools/shell/: tests.rs
crates/tui/src/tools/subagent/: coord.rs  mod.rs  tests.rs
crates/tui/src/tools/web/: cache.rs  extract.rs  fetch.rs  mod.rs
crates/tui/src/tui/: app.rs  approval.rs  auto_review.rs  clipboard.rs  color_compat.rs  coordination_detail.rs  file_tree.rs  history.rs  key_shortcuts.rs  keybindings.rs  markdown_render.rs  model_picker.rs  mouse_ui.rs  notifications.rs  osc8.rs  pager.rs  plan_prompt.rs  prompt_suggestion.rs  provider_picker.rs  sidebar.rs  subagent_routing.rs  tool_routing.rs  transcript.rs  ui.rs  underwater.rs
crates/tui/src/tui/app/: tests.rs
crates/tui/src/tui/approval/: policy.rs
crates/tui/src/tui/history/: tests.rs
crates/tui/src/tui/hotbar/: actions.rs  setup.rs
crates/tui/src/tui/onboarding/: api_key.rs  mod.rs  trust_directory.rs
crates/tui/src/tui/setup/: fleet_draft.rs  mod.rs  operate.rs
crates/tui/src/tui/streaming/: mod.rs
crates/tui/src/tui/ui/: activity_detail.rs  tests.rs
crates/tui/src/tui/views/: fleet_roster.rs  fleet_setup.rs  mod.rs  mode_picker.rs
crates/tui/src/tui/widgets/: mod.rs  workflow_panel.rs
crates/tui/src/tui/work_surface/: mod.rs  model.rs
crates/tui/src/work_graph/: compat.rs  events.rs  liveness.rs  migration.rs  mod.rs  model.rs  reducer.rs  runtime.rs  tests.rs  validate.rs
crates/tui/tests/: adaptive_evidence_acceptance.rs  diagnostic_read_only.rs  eval_smoke_acceptance.rs  qa_pty.rs  release_runtime_qa.rs
crates/tui/tests/support/qa_harness/: harness.rs  pty.rs
crates/workflow-js/: Cargo.toml
crates/workflow-js/src/: driver.rs  vm.rs
crates/workflow-js/tests/: vm_tests.rs
crates/workflow/src/: elevation.rs  js_authoring.rs  lib.rs
docs/: AGENT_RUNNER.md  AGENT_WORKFLOWS_0868.md  CONFIGURATION.md  CONTRIBUTORS.md  DOGFOOD_AUTOMATIC_WORKFLOWS.md  HarmonyOS.md  INSTALL.md  KEYBINDINGS.md  OPERATIONS_RUNBOOK.md  POST_0_9_1_SEAMS.md  PROVIDERS.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RUNTIME_SIMPLIFICATION_DESIGN.md  TERMUX.md
docs/examples/dogfood-automatic/: wf_a2_staged_bugfix.workflow.js  wf_a3_partial_failure_synthesis.workflow.js  wf_a4_cancel_mid_run.workflow.js
docs/skills/codew-release-qa-sweep/: SKILL.md
npm/codewhale/: README.md  package.json
npm/codewhale/scripts/: artifacts.js  install.js  preflight-glibc.js  run.js  verify-release-assets.js
npm/codewhale/test/: artifacts.test.js  install.test.js  postinstall.test.js  release-assets.test.js
npm/deepseek-tui/: README.md  package.json
scripts/: measure-runtime-contract.py  measure-tool-catalog.py
scripts/release/: check-published.sh  check-versions.sh  npm-wrapper-smoke.js  prepare-local-release-assets.js  prepare-release.sh
scripts/remote-smoke/: README.md  agent-session.sh  setup-vm.sh
web/app/: globals.css
web/lib/: facts-drift.ts  facts.generated.ts  release-credits.ts
web/scripts/: facts-lib.mjs
workflows/: v0868_stopship_lane.workflow.js
(+8 files in other folders)
