[package]
name = "codewhale-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for open-source and open-weight coding models"
default-run = "codewhale-tui"

[features]
default = ["tui", "json", "toml", "pdf"]
tui = ["dep:schemaui", "schemaui/tui", "json", "toml"]
web = ["dep:schemaui", "schemaui/web", "json", "toml"]
json = ["schemaui/json"]
toml = ["schemaui/toml"]
long-running-tests = []
pdf = ["dep:pdf-extract"]

[[bin]]
name = "codewhale-tui"
path = "src/main.rs"

[dependencies]
ahash = "0.8"
anyhow.workspace = true
codewhale-config = { path = "../config", version = "0.9.1" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.9.1" }
codewhale-lane = { path = "../lane", version = "0.9.1" }
codewhale-protocol = { path = "../protocol", version = "0.9.1" }
codewhale-release = { path = "../release", version = "0.9.1" }
codewhale-secrets = { path = "../secrets", version = "0.9.1" }
codewhale-tools = { path = "../tools", version = "0.9.1" }
codewhale-workflow = { path = "../workflow", version = "0.9.1" }
codewhale-workflow-js = { path = "../workflow-js", version = "0.9.1" }
schemaui = { version = "0.12.0", default-features = false, optional = true }
async-stream = "0.3.6"
async-trait.workspace = true
base64 = "0.22.1"
axum.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored = "3.0.0"
crossterm = "0.29"
dotenvy = "0.15.7"
fd-lock = "4.0.4"
dirs.workspace = true
futures-util = "0.3.31"
oauth2 = "5"
ratatui = "0.30"
regex = "1.11"
reqwest = { workspace = true, features = ["blocking", "stream", "form", "http2", "gzip"] }
rmcp = { version = "2.2.0", default-features = false, features = ["auth", "client"] }
rustls.workspace = true
qrcode = { version = "0.14", default-features = false }
similar = "3"
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
schemars = { version = "1.2.1", features = ["derive", "preserve_order"] }
shellexpand = "3"
toml.workspace = true
toml_edit.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.16", features = ["io"] }
unicode-width = "0.2"
unicode-segmentation = "1.12"
urlencoding = "2.1"
uuid.workspace = true
chrono.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
wait-timeout = "0.2"
webbrowser = "1.0"
multimap = "0.10.0"
shlex = "1.3.0"
tiny_http = "0.12"
globset = "0.4"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
htmd = "0.5.4"
lru = "0.18"
parking_lot = "0.12"
pdf-extract = { version = "0.12", optional = true }
readability = { version = "0.3.0", default-features = false }
tar = "0.4"
flate2 = "1.1"
sha2.workspace = true
semver.workspace = true
rust-i18n = "4.1.0"
shell-words = "1.1.1"
mimalloc.workspace = true

[build-dependencies]
codewhale-build-support = { path = "../build-support", version = "0.9.1" }

[dev-dependencies]
cucumber = "0.23.0"
wiremock = "0.6"
pretty_assertions = "1.4"
vt100 = "0.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", all(target_os = "linux", not(target_env = "ohos"))))'.dependencies]
arboard = "3.4"

[target.'cfg(not(target_env = "ohos"))'.dependencies]
portable-pty = "0.9"
starlark = "0.13.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSDictionary", "NSError", "NSObject", "NSString", "NSURL"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Environment", "Win32_System_JobObjects", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
