[package]
name = "codewhale-workflow-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynamic Workflow runtime: sandboxed rquickjs scripts that dispatch CodeWhale subagents"

[dependencies]
async-trait.workspace = true
jsonschema.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

# rquickjs does not ship pre-generated bindings for Android. Generate them
# against the NDK sysroot so the advertised Termux/Android release target can
# compile instead of trying to include a nonexistent bindings file.
[target.'cfg(target_os = "android")'.dependencies]
rquickjs = { workspace = true, features = ["bindgen"] }

[dev-dependencies]
serde_json.workspace = true
